<resources>
    <string name="app_name">Heladería "San Remo"</string>
    <string name="footer">Softtek 2018</string>

    <string name="txtUser">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="titleNewUser">Registro nuevo usuario</string>
    <string name="etNewUserName">Nombre de usuario</string>
    <string name="etNewUserMail">E-mail</string>
    <string name="etNewUserPassword">Ingresa una contraseña</string>
    <string name="etNewUserPassword2">Confirma contraseña</string>

    <string name="titleCliente">Nuevo Cliente</string>
    <string name="name_last">Nombre y Apellido</string>
    <string name="name">Nombre</string>
    <string name="address">Dirección</string>
    <string name="telephone">Teléfono</string>
    <string name="pesos">$</string>
    <string name="price">Precio</string>

    <string name="titleDetCliente">Detalles del Cliente</string>
    <string name="titleDetRecipiente">Detalles del Recipiente</string>
    <string name="titleDetSabor">Detalles del Sabor</string>

    <string name="listCliente">Listado de Clientes</string>
    <string name="btnNuevoRecipiente">Nuevo Recipiente</string>
    <string name="btnNuevoCliente">Nuevo Recipiente</string>
    <string name="btnNuevoSabor">Nuevo Recipiente</string>

    <string name="btnIngresar">Ingresar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnVolver">Volver</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnAgregar">Agregar Nuevo</string>
    <string name="btnListado">Listado</string>

    <string name="tvClientes">Clientes</string>
    <string name="tvSabores">Sabores</string>
    <string name="tvRecipientes">Recipientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
