<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical"
    tools:context="com.appandroid.nahuelmarchelli.appheladeria.RegisterUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/marg10">

        <TextView
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleNewUser" />

        <EditText
            android:id="@+id/etNewNombreUser"
            style="@style/etStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNewUserName"
            android:inputType="text"
            android:maxLength="40" />

        <EditText
            android:id="@+id/etNewUserMail"
            style="@style/etStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNewUserMail"
            android:inputType="textEmailAddress"
            android:maxLength="40" />

        <EditText
            android:id="@+id/etNewUserPassword"
            style="@style/etStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNewUserPassword"
            android:inputType="numberPassword"
            android:maxLength="12" />

        <EditText
            android:id="@+id/etNewUserPassword2"
            style="@style/etStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNewUserPassword2"
            android:inputType="numberPassword"
            android:maxLength="12" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelaNewUsuario"
                style="@style/btnRojo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/btnCancelar" />

            <Button
                android:id="@+id/btnConfirmaNewUsuario"
                style="@style/btnVerde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/btnConfirmar" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/footer" />
    </LinearLayout>
</LinearLayout>
