<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical"
    tools:context="com.appandroid.nahuelmarchelli.appheladeria.NewClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/marg10">

        <TextView
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleCliente" />

        <EditText
            android:id="@+id/etNombreCli"
            style="@style/etStyle"
            android:maxLength="40"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_last" />

        <EditText
            android:id="@+id/etDireccionCli"
            android:maxLength="40"
            style="@style/etStyle"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/etTelefonoCli"
            style="@style/etStyle"
            android:maxLength="10"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/marg15">

        <Button
            android:id="@+id/btnCancelar"
            style="@style/btnRojo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

        <Button
            android:id="@+id/btnConfirmaCliente"
            style="@style/btnAzul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGuardar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/footer" />
    </LinearLayout>
</LinearLayout>
