<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical"
    tools:context="com.appandroid.nahuelmarchelli.appheladeria.NewRecipienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/marg10">

        <TextView
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNuevoRecipiente" />

        <EditText
            android:id="@+id/etNombreRecip"
            android:maxLength="40"
            style="@style/etStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_marginStart="@dimen/marg5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tvStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesos" />

            <EditText
                android:id="@+id/etPrecioRecip"
                style="@style/etStyle"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:maxLength="7" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/marg15">

        <Button
            android:id="@+id/btnCancelar"
            style="@style/btnRojo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

        <Button
            android:id="@+id/btnConfirmaRecipiente"
            style="@style/btnAzul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGuardar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/footer" />
    </LinearLayout>
</LinearLayout>
