<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appandroid.nahuelmarchelli.appheladeria.DetailsClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/marg15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDetCliente"
            android:textSize="@dimen/fontL" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/marg10"
            android:layout_marginTop="@dimen/marg5"
            android:background="@color/gray2" />

        <TextView
            style="@style/tvDetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_last" />

        <TextView
            android:id="@+id/detailsClientName"
            style="@style/tvDetItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/marg5"
            android:layout_marginTop="@dimen/marg5"
            android:background="@color/gray1" />

        <TextView
            style="@style/tvDetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/detailsClientAddress"
            style="@style/tvDetItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/marg5"
            android:layout_marginTop="@dimen/marg5"
            android:background="@color/gray1" />

        <TextView
            style="@style/tvDetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone" />

        <TextView
            android:id="@+id/detailsClientTelephone"
            style="@style/tvDetItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/footer" />
    </LinearLayout>
</LinearLayout>
